[gd_scene load_steps=5 format=3 uid="uid://b4datev8ma8h8"]

[ext_resource type="Script" path="res://addons/Components/ui/component_database/component_database_main/database_list/DatabaseList.gd" id="1_e6ddm"]
[ext_resource type="Texture2D" uid="uid://ct2mwpvdrkvu4" path="res://addons/Components/assets/icons/add.svg" id="1_pn2a0"]
[ext_resource type="Texture2D" uid="uid://xch026vn771l" path="res://addons/Components/assets/icons/subtract.svg" id="2_355i3"]
[ext_resource type="Texture2D" uid="uid://pobnhskta7x3" path="res://addons/Components/assets/icons/save.svg" id="4_e7p2x"]

[node name="DatabaseList" type="VBoxContainer"]
script = ExtResource("1_e6ddm")

[node name="ctrls" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2

[node name="Label" type="Label" parent="ctrls"]
layout_mode = 2
text = "Databases: "

[node name="Spacer" type="Control" parent="ctrls"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AddDB" type="Button" parent="ctrls"]
layout_mode = 2
tooltip_text = "Add new Component Database resource"
icon = ExtResource("1_pn2a0")
flat = true

[node name="RemDB" type="Button" parent="ctrls"]
layout_mode = 2
tooltip_text = "Remove/Delete currently selected Component Database resource"
icon = ExtResource("2_355i3")
flat = true

[node name="SaveDB" type="Button" parent="ctrls"]
layout_mode = 2
tooltip_text = "Save currently selected Component Database changes"
icon = ExtResource("4_e7p2x")
flat = true

[node name="Databases" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Scroll" type="ScrollContainer" parent="Databases"]
layout_mode = 2

[node name="Tree" type="Tree" parent="Databases/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
hide_root = true

[connection signal="pressed" from="ctrls/AddDB" to="." method="_on_add_db_pressed"]
[connection signal="pressed" from="ctrls/RemDB" to="." method="_on_rem_db_pressed"]
[connection signal="pressed" from="ctrls/SaveDB" to="." method="_on_save_db_pressed"]
[connection signal="item_selected" from="Databases/Scroll/Tree" to="." method="_on_tree_item_selected"]
